# credit-risk-bucketing-microservice

./: Makefile  README.md  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: tests.yaml
docs/: Makefile  conf.py  index.rst  make.bat
mlruns/1/models/m-569a3271d64d4767b077af3acba2a01a/artifacts/: MLmodel  model.pkl  registered_model_meta
mlruns/1/models/m-5a49a2970f1d4c7d876e10d63e73d4fa/artifacts/: MLmodel  model.pkl  registered_model_meta
mlruns/1/models/m-764635145b834e88845427d9fafc3ae2/artifacts/: MLmodel  conda.yaml  requirements.txt
mlruns/1/models/m-7eb9bf62347b494c9348adea657bc97f/artifacts/: MLmodel  conda.yaml  model.pkl  registered_model_meta  requirements.txt
mlruns/1/models/m-9a593b928c09458aa0da6113ca66f2af/artifacts/: MLmodel  conda.yaml  model.pkl  requirements.txt
mlruns/1/models/m-e2d878ecd4f744aca6f946f147fe4061/artifacts/: MLmodel  registered_model_meta
notebooks/: clustering.ipynb  data-analysis.ipynb  first-cluster-model.ipynb  second-cluster-model.ipynb
src/api/: main.py  schemas.py  utils.py
src/data/: make_dataset.py
src/features/: build_features.py
src/models/: train_model.py
tests/: test_features.py  test_training.py
